--- a/public/css/main.css
+++ b/public/css/main.css
@@ -306,7 +306,7 @@ iframe {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 43px 88px 93px 190px;
+    padding: 43px 88px 50px 190px;
 }
 
 
@@ -461,6 +461,28 @@ input.input100 {
     min-width: 160px;
     height: 50px;
     background-color: #57b846;
+    border-radius: 25px;
+    font-family: Poppins-Regular;
+    font-size: 16px;
+    color: #fff;
+    line-height: 1.2;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+}
+
+.signup100-form-btn {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    min-width: 160px;
+    height: 50px;
     border-radius: 25px;
     font-family: Poppins-Regular;
     font-size: 16px;
