--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,30 +3,50 @@
         <div class="wrap-login100">
             <div class="login100-form-title" style="background-image: url(images/bg-01.jpg);">
                 <span class="login100-form-title-1">
-                    Sign In
+                    Sign Up
                 </span>
             </div>
 
-            <form class="login100-form validate-form p-b-30">
+            {{#if errors}}
+                <div class="alert alert-warning alert-dismissible fade show fs-13 mt-3 mx-3" role="alert">
+                    {{#each errors }}
+                    <li>{{msg}}</li>
+                    {{/each}}
+                    <button type="button" class="close fs-19" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {{/if}}
+
+            {{#if_not_empty success}}
+            <div class="alert alert-success alert-dismissible fade show fs-13 mt-3 mx-3" role="alert">
+                {{success}}
+                <button type="button" class="close fs-19" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {{/if_not_empty}}
+
+            <form class="login100-form validate-form p-b-30" method="POST" action="signup">                
                 <div class="wrap-input100 validate-input m-b-26" data-validate="Email is required">
                     <span class="label-input100">Email</span>
-                    <input class="input100" type="email" name="email" placeholder="Enter email">
+                    <input class="input100" type="email" name="email" placeholder="Enter email" value="{{email}}">
                     <span class="focus-input100"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input m-b-26" data-validate="full name is required">
                     <span class="label-input100">Full Name</span>
-                    <input class="input100" type="text" name="full_name" placeholder="Enter Full Name">
+                    <input class="input100" type="text" name="full_name" placeholder="Enter Full Name" value="{{full_name}}">
                     <span class="focus-input100"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
                     <span class="label-input100">Password</span>
-                    <input class="input100" type="password" name="password" placeholder="Enter password">
+                    <input class="input100" type="password" name="password" placeholder="Enter password" value="{{password}}">
                     <span class="focus-input100"></span>
                 </div>
 
-                <div class="wrap-input100 validate-input m-b-18" data-validate="Confirm Password is required">
+                <div class="wrap-input100 validate-input m-b-18" data-validate="Confirm Password is required" value="{{repeat_password}}">
                     <span class="label-input100">Password</span>
                     <input class="input100" type="password" name="repeat_password" placeholder="Repeat the password">
                     <span class="focus-input100"></span>
