--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -43,13 +43,32 @@
                     </div>
                 </div>
 
-                <div class="container-login100-form-btn ml-auto">
-                    <button class="login100-form-btn">
+                <div class="container-login100-form-btn">
+                    <button class="login100-form-btn ml-5">
                         Login
                     </button>
                 </div>
             </form>
-            <div class="row w-100 mt-0 mb-3 justify-content-center align-items-center">
+
+            <div class="w-100 mt-0">
+                <div class="txt1 text-center p-b-10 di">
+                    <span>
+                        Or Sign Up Using
+                    </span>
+                </div>
+                <div class="flex-c-m">
+                    <a href="#" class="login100-social-item bg1">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="#" class="login100-social-item bg2">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="#" class="login100-social-item bg3">
+                        <i class="fa fa-google"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="row w-100 mt-3 txt1 mb-3 justify-content-center align-items-center">
                 <span>Dont have an account? <a href="/signup"> Create</a></span>
             </div>
         </div>
