added twitter sign in

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -60,7 +60,7 @@
                     <a href="#" class="login100-social-item bg1">
                         <i class="fa fa-facebook"></i>
                     </a>
-                    <a href="#" class="login100-social-item bg2">
+                    <a href="/auth/twitter" class="login100-social-item bg2">
                         <i class="fa fa-twitter"></i>
                     </a>
                     <a href="#" class="login100-social-item bg3">
