--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -57,13 +57,13 @@
                     </span>
                 </div>
                 <div class="flex-c-m">
-                    <a href="#" class="login100-social-item bg1">
+                    <a href="/auth/facebook" class="login100-social-item bg1">
                         <i class="fa fa-facebook"></i>
                     </a>
                     <a href="/auth/twitter" class="login100-social-item bg2">
                         <i class="fa fa-twitter"></i>
                     </a>
-                    <a href="#" class="login100-social-item bg3">
+                    <a href="/auth/google" class="login100-social-item bg3">
                         <i class="fa fa-google"></i>
                     </a>
                 </div>
